--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ cycler==0.11.0
 entrypoints==0.4
 exceptiongroup==1.1.0
 fonttools==4.38.0
-gensim
+gensim==3.8.3
 idna==3.4
 importlib-resources==5.10.2
 iniconfig==1.1.1
@@ -35,7 +35,7 @@ PyYAML==6.0
 requests==2.28.1
 scikit-learn==1.2.0
 scipy==1.9.3
-sentencepiece
+sentencepiece==0.1.97
 six==1.16.0
 smart-open==6.3.0
 threadpoolctl==3.1.0
@@ -43,5 +43,5 @@ tomli==2.0.1
 toolz==0.12.0
 tqdm==4.64.1
 urllib3==1.26.13
-whatlies
+whatlies==0.7.0
 zipp==3.11.0
